--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 </head>
 <body>
 
+    <!-- Added Navbar with bootstrap -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Vincent Rodriguez</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+          <!-- used flex-flow-reverse to adjust placement of nav buttons and name field -->
           <div class="collapse navbar-collapse flex-row-reverse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
+                <!-- created button links to other pages -->
               <a class="nav-link" aria-current="page" href="contact.html">Contact</a>
               <a class="nav-link" href="portfolio.html">Portfolio</a>
               <a class="nav-link active" href="index.html">About Me</a>
