added card layout to each page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
           </div>
         </div>
       </nav>
+
+      <div class="card text-dark bg-light mb-3" style="max-width: 992px; margin-left: 10px; margin-right: 10px;">
+        <!-- changed div to h1 -->
+        <h1 class="card-header">About Me</h1>
+        <div class="card-body">
+          <p class="card-text">Will continue to put more stuff THIS IS MY ABOUT ME.</p>
+        </div>
+      </div>
     
 </body>
 </html>
