--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,11 @@
         </div>
       </nav>
 
-      <div class="card text-dark bg-light mb-3" style="max-width: 992px;">
-        <div class="card-header">Contact</div>
+    <!-- placed form within a card class -->
+    <!-- added max width and margins so there's spacing  -->
+      <div class="card text-dark bg-light mb-3" style="max-width: 992px; margin-left: 10px; margin-right: 10px;">
+        <!-- changed div to h1 -->
+        <h1 class="card-header">Contact</h1>
         <div class="card-body">
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Name</label>
@@ -47,22 +50,6 @@
               </div>
         </div>
       </div>
-      <!--  
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="name">
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-      </div>
-      <div class="mb-3">
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </div>
-    -->
+      
 </body>
 </html>
