added jpg files to the directory and linked them within the portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,9 +33,30 @@
         <!-- changed div to h1 -->
         <h1 class="card-header">Portfolio</h1>
         <div class="card-body">
+          <!-- created two-column rows to place my art images -->
           <div class="row">
             <div class="col-md-4" style="margin: 10px;">
+              <img src="Magikarp.jpg" class="img-fluid" alt="Magikarp">
+            </div>
+            <div class="col-md-4" style="margin: 10px;">
+              <img src="EvaUnit-01.jpg" class="img-fluid" alt="Unit-01 Berserk">
+            </div>
+          </div>
+        <div class="row">
+          <div class="col-md-4" style="margin: 10px;">
+            <img src="MF-DOOMtoon.jpg" class="img-fluid" alt="Madvillian">
+          </div>
+          <div class="col-md-4" style="margin: 10px;">
+            <img src="Koitattoo.jpg" class="img-fluid" alt="Japanese Koi Irezumi">
+          </div>
         </div>
+        <!-- this row only contains one image -->
+        <div class="row">
+          <div class="col-md-4" style="margin: 10px;">
+            <img src="San-Mononoke.jpg" class="img-fluid" alt="Princess Mononoke">
+          </div>
+        </div>
+
       </div>
       
         
