added sticky footers and profile picture to About Me

--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,13 @@
               </div>
         </div>
       </div>
+
+      <!-- created sticky footer -->
+      <nav class="navbar fixed-bottom navbar-light bg-light">
+        <div class="container-fluid justify-content-center">
+          <a class="navbar-brand" href="#">@ Copyright Vince Rodriguez</a>
+        </div>
+      </nav>
       
 </body>
 </html>
