--- a/portfolio.html
+++ b/portfolio.html
@@ -59,6 +59,13 @@
         </div>
 
       </div>
+
+      <!-- created sticky footer -->
+      <nav class="navbar fixed-bottom navbar-light bg-light">
+        <div class="container-fluid justify-content-center">
+          <a class="navbar-brand" href="#">@ Copyright Vince Rodriguez</a>
+        </div>
+      </nav>
       
         
 
